--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(age_index)
 export(carbchem)
 export(clean_foram)
 export(load_foram)
+export(parms_foram_adj)
 export(post_plot)
 export(post_plot_ind)
 export(priors_foram)
