BUGS model fixes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,9 @@ Description: This package loads and grooms geochemical proxy data,
     user-specified proxy system parameters, and climate and carbon 
     cycle variables. This version includes the foraminiferal proxy 
     system, with plans to include phytoplankton, paleosol and 
-    terrestrial plant proxy systems.   
+    terrestrial plant proxy systems. Marine equilibrium constant (Ks)
+    are calculated following Zeebe & Tyrrell (2019) and marine carbonate 
+    chemistry calculations follow Zeebe & Wolf-Gladrow (2001). 
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
